# csv_median_calculator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  config.toml
src/: app_config.hpp  config_parser.cpp  config_parser.hpp  csv_parser.cpp  csv_parser.hpp  csv_writer.cpp  csv_writer.hpp  incremental_median.hpp  main.cpp  median_calculator.cpp  median_calculator.hpp  price_timestemp_data.hpp
